AWS-Network-Project/05-testing-vpc-connectivity/terraform/03-igw.tf
resource "aws_internet_gateway" "igw_us_east_1" {
  vpc_id = aws_vpc.us-east-1.id

  tags = {
    Name = "igw_us_east_1"
  }
}
